--- a/index-particles.html
+++ b/index-particles.html
@@ -1169,7 +1169,7 @@
 											<div class="align-left">
 												<a href="#" class="button" onclick="$('#cform').submit(); return false;">
 													<span class="text">Submit</span>
-													<span class="icon"><i class="la la-arrow-right"></i></span>
+													<span class="icon"><i class="lni lni-arrow-right"></i></span>
 												</a>
 											</div>
 										</form>
@@ -1241,4 +1241,5 @@
 	<script src="js/particles-setting.js"></script>
 	
 </body>
+
 </html>
