--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
 	<title>Huzaifah 3D - Designing Creative Visions In The Digital Realm</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="vCard & Resume Template" />
+	<meta name="description" content="Huzaifah 3D Portfolio Website" />
 	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cards, portfolio" />
 	<meta name="author" content="beshleyua" />
 	<link href="https://cdn.lineicons.com/5.0/lineicons.css" rel="stylesheet">	
@@ -1242,3 +1242,4 @@
 	
 </body>
 </html>
+
